{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 85,
  "lineage": "b7bab62e-a243-280c-0e16-2079b103fccf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_for_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb089a8e749e8473",
            "association_id": "eipassoc-03f6ad7792dbdad03",
            "domain": "vpc",
            "id": "eipalloc-0eb089a8e749e8473",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f22b2586fefd8f6b",
            "private_dns": "ip-10-0-1-38.ec2.internal",
            "private_ip": "10.0.1.38",
            "public_dns": "ec2-3-208-221-192.compute-1.amazonaws.com",
            "public_ip": "3.208.221.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elastic_ip_for_nat"
            },
            "tags_all": {
              "Name": "elastic_ip_for_nat"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.bestseller-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264205615:internet-gateway/igw-0a07a5f334f7a21c6",
            "id": "igw-0a07a5f334f7a21c6",
            "owner_id": "058264205615",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-060e033a1814ce9e2"
          },
          "dependencies": [
            "aws_vpc.bestseller-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264205615:loadbalancer/app/load-balancer/a5b7120fe0968576",
            "arn_suffix": "app/load-balancer/a5b7120fe0968576",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "load-balancer-654384307.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264205615:loadbalancer/app/load-balancer/a5b7120fe0968576",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b4e8b77f1ba6b0da"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01764acc006a738d8"
              },
              {
                "subnet_id": "subnet-048b35d550bc285ff"
              }
            ],
            "subnets": [
              "subnet-01764acc006a738d8",
              "subnet-048b35d550bc285ff"
            ],
            "vpc_id": "vpc-060e033a1814ce9e2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_security_group.elb-sg",
            "aws_subnet.public_subnet-1",
            "aws_subnet.public_subnet-2",
            "aws_vpc.bestseller-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264205615:listener/app/load-balancer/a5b7120fe0968576/ab8722a005d72d08",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264205615:targetgroup/lb-target-group/53f9f281d6f27718",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264205615:listener/app/load-balancer/a5b7120fe0968576/ab8722a005d72d08",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:058264205615:loadbalancer/app/load-balancer/a5b7120fe0968576",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_lb.load-balancer",
            "aws_lb_target_group.lb-target-group",
            "aws_security_group.elb-sg",
            "aws_subnet.public_subnet-1",
            "aws_subnet.public_subnet-2",
            "aws_vpc.bestseller-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264205615:targetgroup/lb-target-group/53f9f281d6f27718",
            "arn_suffix": "targetgroup/lb-target-group/53f9f281d6f27718",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264205615:targetgroup/lb-target-group/53f9f281d6f27718",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:058264205615:loadbalancer/app/load-balancer/a5b7120fe0968576"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-060e033a1814ce9e2"
          },
          "dependencies": [
            "aws_vpc.bestseller-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb089a8e749e8473",
            "association_id": "eipassoc-03f6ad7792dbdad03",
            "connectivity_type": "public",
            "id": "nat-0faefb92ebb30c529",
            "network_interface_id": "eni-0f22b2586fefd8f6b",
            "private_ip": "10.0.1.38",
            "public_ip": "3.208.221.192",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-048b35d550bc285ff",
            "tags": {
              "Name": "nat_gateway"
            },
            "tags_all": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip_for_nat",
            "aws_internet_gateway.internet-gateway",
            "aws_subnet.public_subnet-1",
            "aws_vpc.bestseller-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264205615:route-table/rtb-0d55a0437ec6db683",
            "id": "rtb-0d55a0437ec6db683",
            "owner_id": "058264205615",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0faefb92ebb30c529",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nat-route-table"
            },
            "tags_all": {
              "Name": "nat-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-060e033a1814ce9e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gateway",
            "aws_vpc.bestseller-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264205615:route-table/rtb-007c0a255c2534740",
            "id": "rtb-007c0a255c2534740",
            "owner_id": "058264205615",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a07a5f334f7a21c6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table"
            },
            "tags_all": {
              "Name": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-060e033a1814ce9e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.bestseller-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9f23c95bd0a1b3",
            "route_table_id": "rtb-0d55a0437ec6db683",
            "subnet_id": "subnet-08c2204bfb086c285"
          },
          "dependencies": [
            "aws_eip.elastic_ip_for_nat",
            "aws_internet_gateway.internet-gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.nat_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet-1",
            "aws_vpc.bestseller-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0b31b2f537b25e7",
            "route_table_id": "rtb-007c0a255c2534740",
            "subnet_id": "subnet-048b35d550bc285ff"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.route-table",
            "aws_subnet.public_subnet-1",
            "aws_vpc.bestseller-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00546c71331858bda",
            "route_table_id": "rtb-007c0a255c2534740",
            "subnet_id": "subnet-01764acc006a738d8"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.route-table",
            "aws_subnet.public_subnet-2",
            "aws_vpc.bestseller-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264205615:security-group/sg-09a2de86db995ae6c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a2de86db995ae6c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow http request from Load Balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b4e8b77f1ba6b0da"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "058264205615",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-060e033a1814ce9e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb-sg",
            "aws_vpc.bestseller-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264205615:security-group/sg-0b4e8b77f1ba6b0da",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4e8b77f1ba6b0da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb-sg",
            "name_prefix": "",
            "owner_id": "058264205615",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-060e033a1814ce9e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bestseller-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264205615:subnet/subnet-08c2204bfb086c285",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c2204bfb086c285",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264205615",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-060e033a1814ce9e2"
          },
          "dependencies": [
            "aws_vpc.bestseller-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264205615:subnet/subnet-048b35d550bc285ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048b35d550bc285ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264205615",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-060e033a1814ce9e2"
          },
          "dependencies": [
            "aws_vpc.bestseller-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264205615:subnet/subnet-01764acc006a738d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01764acc006a738d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264205615",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-060e033a1814ce9e2"
          },
          "dependencies": [
            "aws_vpc.bestseller-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bestseller-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264205615:vpc/vpc-060e033a1814ce9e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01b136df8b33f1f8f",
            "default_route_table_id": "rtb-0be5ff6e0ef4574d3",
            "default_security_group_id": "sg-0b06ac40578b1acff",
            "dhcp_options_id": "dopt-0cc6255501ff04d26",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-060e033a1814ce9e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be5ff6e0ef4574d3",
            "owner_id": "058264205615",
            "tags": {
              "Name": "bestseller-vpc"
            },
            "tags_all": {
              "Name": "bestseller-vpc"
            }
          }
        }
      ]
    }
  ]
}